Downloads/2025ccp1-team33-main/test/parser/bad/a_bad_None.py
# RUN: %chocopy-llvm %s 2>&1 | FileCheck %s.err

x: [[A]] = [[None]]
